[package]
name = "raptorq"
description = "RaptorQ (RFC6330)"
license = "Apache-2.0"
homepage = "https://github.com/sfjohnson/raptorq"
repository = "https://github.com/sfjohnson/raptorq"
readme = "README.md"
version = "2.0.0"
edition = "2021"
authors = ["Christopher Berner <christopherberner@gmail.com>", "Iroha <sam@iroha.is>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
serde = {version = "1.0.102", features=["std", "derive"], optional = true}
pyo3 = {version = "0.20", features=["extension-module", "abi3-py37"], optional = true }
libc = "0.2.97"

[dev-dependencies]
criterion = "0.3"
primal = "0.3"
rand = "0.8"
threadpool = "1.7"

[profile.release]
lto = "fat"
panic = "abort"

[[bench]]
name = "codec_benchmark"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "matrix_sparsity"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "encode_benchmark"
harness = false

[[bench]]
name = "decode_benchmark"
harness = false

[[example]]
name = "main"
required-features = ["std"]

[features]
default = ["std"]

benchmarking = ["std"]
python = ["pyo3", "std"]
serde_support = ["serde", "std"]
std = []
